Revision history for {{$dist->name}}

{{$NEXT}}
          - fix issues with check_dual_life_version feature

0.007     2013-09-18 00:41:19Z (Karen Etheridge)
          - new "check_dual_life_versions" option

0.006     2013-09-11 04:03:33Z (Karen Etheridge)
          - new "check_module_versions" option

0.005     2013-09-07 00:50:54Z (Karen Etheridge)
          - all invalid dependencies are now reported, instead of only the
            first (David Golden, github PR #1)

0.004     2013-08-21 19:19:54Z (Karen Etheridge)
          - fix bad regexp causing test failure on perls < 5.019

0.003     2013-08-20 06:09:58Z (Karen Etheridge)
          - new config settings for 'starting_version': 'current' and 'latest'

0.002     2013-08-17 17:17:03Z (Karen Etheridge)
          - now respecting the deprecated_ok config
          - also check that the specific version of the prereq is available in
            the indicated perl version

0.001     2013-08-17 05:22:00Z (Karen Etheridge)
          - Initial release.
